# delegation-dao

./: .gitignore  README.md
app/: app.config.ts  app.vue
app/components/: AppHeader.vue
app/pages/: delegations.vue  index.vue
content/: index.yml
content/1.getting-started/: 1.index.md  2.rules.md  3.delegation_criteria.md  4.additional_information.md  4.token_allocation.md  5.epoch_distribution.md  5.points_multiplier.md  5.token_allocation.md  6.epoch_distribution.md  8.monitoring.md  9.join.md
data/: convert.sh  new_delegations.csv  output.json
scripts/: Cargo.toml  README.md  delegation_messages.json
server/api/: delegations.get.ts
