[package]
name = "delegation-scripts"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/bitsongofficial/bs-accounts"
version  = "0.0.1"

          
[dependencies]
cosmwasm-schema              = "2.2.0"
cosmos-sdk-proto = "0.24.0"
cosmwasm-crypto  = { version = "2.1.4",  default-features = false }
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_1_4",
  "cosmwasm_2_0",
] }

 
# Abstract Framework and CW-Orchestrator Dependencies
abstract-std                 = "0.26.0"
abstract-sdk                 = "0.26.0"
abstract-client              = { version = "0.26.0",  features = ["interchain"] }
abstract-interface           = { version = "0.26.0", features = [ "daemon"]}
cw-orch-interchain           = { version = "0.9.0",  features = ["daemon"] }
cw-orch-interchain-core      = "0.10.1"
cw-orch-clone-testing        = { version = "0.9.2" }
cw-orch                      = { version = "0.28.0", features = ["daemon"] }

clap                         = { version = "4.0.32", features = ["derive"] }
csv                          = "1.2"
anyhow                       = "1"
dirs                         = "5.0.1"
dotenv                     = { version = "0.15.0" }
pretty_env_logger            = { version = "0.5.0" }
env_logger                   = "0.10.0"
log                          = "0.4.22"
reqwest                      = { version = "0.11.9" }
serde                        = { version = "1.0.140", default-features = false, features = ["derive"] }
serde_json                   = "1.0.79"
tokio                        = "1.39.3"


[dev-dependencies]

# Cargo CLI commands
[[bin]]
name = "deploy"
path = "src/bin/manual_deploy.rs"